refactor: 원화를 달러화로 변경